--- a/www/index.html
+++ b/www/index.html
@@ -41,15 +41,13 @@
                 border: 1px dashed #555;
             }
 		</style>
-		<title>File not found ¯\_(ツ)_/¯</title>
+		<title>It works!</title>
 	</head>
 	<body>
         <div id="content">
-            <h1>Что-то пошло не так :(</h1>
-            <h4>Something went wrong :(</h4>
-            <em><small>The requested URL %ACCESS_FILE% was not found on this server.</small></em><br>
+            <h1>It works!</h1>
+            <em><small>Deltaserver v1.4 (Darkness)</small></em><br>
             <div id="line"></div>
-            <em><small>%PLATFORM% / %SERVER% %VERSION% (%BUILD_NAME%)</small></em>
             <em><small>Alex9932 2018 - 2021 All right reserved</small></em>
 		</div>
 		<div id="img"></div>
