--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
 	<body>
         <div id="content">
             <h1>It works!</h1>
-            <em><small>Deltaserver v1.5 (Shiro)</small></em><br>
+            <em><small>Deltaserver v1.6 (Kaito)</small></em><br>
             <div id="line"></div>
             <em><small>Alex9932 2018 - 2021 All right reserved</small></em>
 		</div>
