--- a/www/index.html
+++ b/www/index.html
@@ -46,9 +46,9 @@
 	<body>
         <div id="content">
             <h1>It works!</h1>
-            <em><small>Deltaserver v1.7 (Roxy)</small></em><br>
+            <em><small>Deltaserver v2.1 (Megumin)</small></em><br>
             <div id="line"></div>
-            <em><small>Alex9932 2018 - 2022 All right reserved</small></em>
+            <em><small>Alex9932 2018 - 2024 All right reserved</small></em>
 		</div>
 		<div id="img"></div>
 	</body>
