--- a/www/index.html
+++ b/www/index.html
@@ -46,9 +46,17 @@
 	<body>
         <div id="content">
             <h1>It works!</h1>
-            <em><small>Deltaserver v2.1 (Megumin)</small></em><br>
+	            <p>
+		            If you see this message, it means the web server is running correctly but no specific<br>
+		            content has been configured for this page. Please verify the application deployment,<br>
+		            check the server settings, or upload an index file to serve content.<br>
+		        </p>
+	            <em>
+		            <small>Deltaserver v2.2 (Kohaku)</small>
+	            </em>
+            <br>
             <div id="line"></div>
-            <em><small>Alex9932 2018 - 2024 All right reserved</small></em>
+            <em><small>Alex9932 2018 - 2025 All right reserved</small></em>
 		</div>
 		<div id="img"></div>
 	</body>
